Add projects section

--- a/index.html
+++ b/index.html
@@ -7,17 +7,33 @@ layout: default
     <div class="row">
       <div class="small-12 medium-8 medium-push-4">
         <h2>
-          check out the latest updates
-          on
+          check out the latest updates on
           <a href="#">
             the alley
           </a>
-          coming to life
-          in the MUB Basement.
+          coming to life in the MUB Basement.
         </h2>
         <a href="#" class="button">
           check it out
         </a>
+      </div>
+    </div>
+  </div>
+  <div class="content projects">
+    <div class="row">
+      <div class="small-12 columns">
+        <div class="text-right">
+          <h3>
+            projects!
+          </h3>
+        </div>
+        <p>
+          do you know of a cool project that someone is already working on?
+          <a href="#">
+            share it with us
+          </a>
+          so we can feature it here!
+        </p>
       </div>
     </div>
   </div>
