Added meet the team section

--- a/index.html
+++ b/index.html
@@ -37,4 +37,38 @@ layout: default
       </div>
     </div>
   </div>
+  <div id="meet-the-team">
+    <div class="intro">
+      <div class="banner">
+        <div class="row">
+          <div class="small-12 columns">
+            <h3>
+              meet the team!
+            </h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="description content">
+      <div class="row">
+        <div class="small-12 columns">
+          <div class="row">
+            <div class="small-12 medium-8 medium-push-2 columns">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed erat lobortis, sodales quam sed, placerat mi.
+                Fusce congue condimentum ante quis rutrum. Cras eget cursus tortor. In sapien sapien, volutpat nec mauris quis,
+                elementum interdum tortor. Praesent consectetur viverra neque at sagittis. In et pellentesque diam. Donec eu hendrerit
+                lorem, a feugiat sem. Vivamus viverra tincidunt nunc sit amet pretium.
+              </p>
+            </div>
+          </div>
+          <div class="text-right">
+            <a href="#" class="large button">
+              see the alley crew
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
