Added contact section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
       </div>
     </div>
   </div>
-  <div class="content projects">
+  <div id="projects" class="content">
     <div class="row">
       <div class="small-12 columns">
         <div class="text-right">
@@ -67,6 +67,28 @@ layout: default
               see the alley crew
             </a>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="involvement" class="content">
+    <div class="row">
+      <div class="small-12 medium-8 medium-push-2">
+        <div class="text-center">
+          <h3>
+            get involved!
+          </h3>
+        </div>
+        <p>
+          Interested in helping out in some way, shape, or form? Maybe you have some great ideas you want to
+          share, or maybe you even want to volunteer to oversee the space for a bit once it opens. There are
+          tons of ways to get involved in this awesome project. Fill out the simple form below and we will help
+          you find your space in the alley crew! :)
+        </p>
+        <div class="text-right">
+          <a href="mailto:bradleyt@mtu.edu?subject=Makerspace Involvement" target="_blank" class="large button">
+            contact us
+          </a>
         </div>
       </div>
     </div>
