Add updates section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,38 @@ layout: default
       </div>
     </div>
   </div>
+  <div id="updates" class="content">
+    <div class="row recent-post" data-equalizer>
+      <div class="small-12 medium-6 columns" data-equalizer-watch>
+        <h3>
+          updates!
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed erat
+          lobortis, sodales quam sed, placerat mi. Fusce congue condimentum ante
+          quis rutrum. Cras eget cursus tortor. In sapien sapien, volutpat nec mauris
+          quis, elementum interdum tortor. Praesent consectetur viverra neque at
+          sagittis. In et pellentesque diam. Donec eu hendrerit lorem, a feugiat sem.
+          Vivamus viverra tincidunt nunc sit amet pretium.
+          Morbi blandit lorem lectus, id vestibulum metus pretium vitae. Cras condimentum
+          congue nulla, quis vestibulum urna consectetur nec. Quisque
+          eget viverra sem. Integer bibendum ligula sed ornare placerat. Mauris
+          iaculis neque in lacinia sodales. Vestibulum lobortis viverra dapibus. In
+          lobortis nibh quis scelerisque fermentum. Curabitur porttitor felis orci, ut
+          lobortis massa pulvinar ut. Etiam eleifend, mauris in tincidunt lobortis,
+          metus dui feugiat odio, a euismod felis leo feugiat est. Nulla mollis diam sit
+          amet neque interdum, dignissim ultrices nibh ornare.
+        </p>
+      </div>
+      <div class="small-12 medium-6 columns" data-equalizer-watch>
+        <div class="preview-image">
+          <a href="#" class="red button">
+            check it out!
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
   <div id="projects" class="content">
     <div class="row">
       <div class="small-12 columns">
