A wee bit of responsiveness

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@ layout: default
 <section id="home">
   <div class="header">
     <div class="row">
-      <div class="small-12 medium-8 medium-push-4">
+      <div class="small-12 medium-8 medium-push-4 columns">
         <h2>
           check out the latest updates on
-          <a href="#">
+          <a href="#" class="scrollto" data-element="updates">
             the alley
           </a>
           coming to life in the MUB Basement.
         </h2>
-        <a href="#" class="button">
+        <a href="{{ site.posts.first.url }}" class="button">
           check it out
         </a>
       </div>
@@ -51,7 +51,7 @@ layout: default
         </div>
         <p>
           do you know of a cool project that someone is already working on?
-          <a href="#">
+          <a href="#" class="scrollto" data-element="involvement">
             share it with us
           </a>
           so we can feature it here!
@@ -95,7 +95,7 @@ layout: default
   </div>
   <div id="involvement" class="content">
     <div class="row">
-      <div class="small-12 medium-8 medium-push-2">
+      <div class="small-12 medium-8 medium-push-2 columns">
         <div class="text-center">
           <h3>
             get involved!
