Updates to the crew and footer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ layout: default
         </div>
         <p>
           do you know of a cool project that someone is already working on?
-          <a href="mailto:bradleyt@mtu.edu?subject=Makerspace - Cool Project" target="_blank" class="large button">
+          <a href="mailto:makerspace@mtu.edu?subject=Makerspace - Cool Project" target="_blank" class="large button">
             share it with us
           </a>
           so we can feature it here!
