Coach sign up and nav changes
- updates to the nav bar
- new post about maker coaches
- maker coach signup link from Alley Crew

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@ layout: default
         <a href="{{ site.posts.first.url }}" class="button">
           check it out
         </a>
+        <a href="http://eepurl.com/bKQAsf">
+          <i class="fa fa-envelope"></i>
+        </a>
+        <a href="http://www.twitter.com/makerspacemtu">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <a href="http://www.facebook.com/makerspacemtu">
+          <i class="fa fa-facebook"></i>
+        </a>
       </div>
     </div>
   </div>
@@ -27,10 +36,10 @@ layout: default
         </h3>
         <p>
           {{ site.posts.first.content | strip_html | newline_to_br | truncatewords:90 }}
-          <a href="{{ site.posts.first.url }}" class="small button">
-            read more
-          </a>
         </p>
+        <a href="{{ site.posts.first.url }}" class="small button">
+          read more
+        </a>
       </div>
       <div class="small-12 medium-6 columns" data-equalizer-watch>
         <div class="preview-image"
@@ -81,12 +90,7 @@ layout: default
           <div class="row">
             <div class="small-12 medium-8 medium-push-2 columns">
               <p>
-                Bringing the old MUB Basement to life with an awesome space for
-                creators, makers, tinkerers, designers, inventors, (whatever you
-                prefer to call yourself), takes a lot of work. And it's gonna take
-                even more when it comes to running it on a daily basis. That's what
-                the alley crew will do once we get it up and moving. For now, check
-                out the committee of people working on putting it all together!
+                Bringing the old MUB Basement to life with an awesome space for creators, makers, tinkerers, designers, inventors, (whatever you prefer to call yourself), takes a lot of work. And it's gonna take even more when it comes to running it on a daily basis. That's what the alley crew will do once we get it up and moving. Interested in helping out? <a href="https://docs.google.com/forms/d/1k2h8GUhAPetOmOHl19RDwa6ZBaaXHhA3LUfiEEQbOyo/viewform?c=0&w=1" class="small button">Sign up here!</a> For now, check out the committee of people working on putting it all together!
               </p>
             </div>
           </div>
