--- a/alley-crew.html
+++ b/alley-crew.html
@@ -21,12 +21,7 @@ layout: default
           <div class="row">
             <div class="small-12 medium-8 medium-push-2 columns">
               <p>
-                Bringing the old MUB Basement to life with an awesome space for
-                creators, makers, tinkerers, designers, inventors, (whatever you
-                prefer to call yourself), takes a lot of work. And it's gonna take
-                even more when it comes to running it on a daily basis. That's what
-                the alley crew will do once we get it up and moving. For now, check
-                out the committee of people working on putting it all together!
+                Bringing the old MUB Basement to life with an awesome space for creators, makers, tinkerers, designers, inventors, (whatever you prefer to call yourself), takes a lot of work. And it's gonna take even more when it comes to running it on a daily basis. That's what the alley crew will do once we get it up and moving. Interested in helping out? <a href="https://docs.google.com/forms/d/1k2h8GUhAPetOmOHl19RDwa6ZBaaXHhA3LUfiEEQbOyo/viewform?c=0&w=1" class="small button">Sign up here!</a> For now, check out the committee of people working on putting it all together!
               </p>
             </div>
           </div>
