Update colors and New logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
           </a>
           coming to life in the MUB Basement.
         </h2>
-        <a href="{{ site.posts.first.url }}" class="button">
+        <a href="{{ site.posts.first.url }}" class="green button">
           check it out
         </a>
       </div>
@@ -21,6 +21,17 @@ layout: default
   </div>
   <div id="updates">
     <div class="row recent-post" data-equalizer>
+      <div class="small-12 medium-6 columns" data-equalizer-watch>
+        <div class="preview-image"
+          {% if site.posts.first.image %} style="background-image: linear-gradient(
+              rgba(244, 64, 64, 0.4),
+              rgba(244, 64, 64, 0.4)
+            ), url('/img/{{ site.posts.first.image }}');"{% endif %}>
+          <a href="{{ site.posts.first.url }}" class="red button">
+            check it out!
+          </a>
+        </div>
+      </div>
       <div class="small-12 medium-6 columns post-text" data-equalizer-watch>
         <h3>
           updates!
@@ -32,17 +43,6 @@ layout: default
           </a>
         </p>
       </div>
-      <div class="small-12 medium-6 columns" data-equalizer-watch>
-        <div class="preview-image"
-          {% if site.posts.first.image %} style="background-image: linear-gradient(
-              rgba(237, 7, 7, 0.4),
-              rgba(237, 7, 7, 0.4)
-            ), url('/img/{{ site.posts.first.image }}');"{% endif %}>
-          <a href="{{ site.posts.first.url }}" class="red button">
-            check it out!
-          </a>
-        </div>
-      </div>
     </div>
   </div>
   <div id="projects" class="content">
@@ -53,7 +53,7 @@ layout: default
             projects!
           </h3>
         </div>
-        <div id="projects-list-view">
+        <!-- <div id="projects-list-view">
           <div class="row">
             {% for project in site.projects %}
             {% if forloop.index < 4 %}
@@ -75,7 +75,7 @@ layout: default
               {% endif %}
             {% endfor %}
           </div>
-        </div>
+        </div> -->
         <p>
           do you know of a cool project that someone is already working on?
           <a href="mailto:makerspace@mtu.edu?subject=Makerspace - Cool Project" target="_blank" class="large button">
