--- a/updates.html
+++ b/updates.html
@@ -50,7 +50,7 @@ layout: default
             </p>
             <p>
               {{ post.content | strip_html | truncatewords:50 }}
-              <a href="{{ post.url }}" class="small button">
+              <a href="{{ post.url }}" class="small red button">
                 read more
               </a>
             </p>
