--- a/wiki/index.html
+++ b/wiki/index.html
@@ -13,7 +13,7 @@ layout: default
 
       {% for group in groups %}
         <h4 class="capitalize">
-          {{ group.name }}
+          {{ group.name | replace: '-', ' ' }}
         </h4>
         <ul>
           {% for wiki in (site.wikis | sort: "title") %}
