basics for the home page

--- a/index.html
+++ b/index.html
@@ -2,3 +2,43 @@
 layout: main
 ---
 
+<div class="hero hero--home">
+  <div class="row">
+    <div class="small-12 columns">
+      <h1 class="hero__header">
+        Your space to<br/>
+        bring projects to life
+      </h1>
+      <a href="#" class="hero__button">
+        Check it out!
+      </a>
+      <a href="#" class="hero__button">
+        <i class="fa fa-facebook"></i>
+      </a>
+      <a href="#" class="hero__button">
+        <i class="fa fa-twitter"></i>
+      </a>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="small-12 columns">
+    <h2 class="header">
+      Our Mission
+    </h2>
+    <p>
+      We exist to create an environment where everyone in the Michigan Tech
+      community is encouraged and supported to make by providing a welcoming
+      space, learning opportunities, a maker network, and resources.
+    </p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="small-12 columns">
+    <h2 class="header">
+      About the Space
+    </h2>
+  </div>
+</div>
