--- a/index.html
+++ b/index.html
@@ -40,5 +40,49 @@ layout: main
     <h2 class="header">
       About the Space
     </h2>
+    <div class="list-item">
+      <div class="list-item__icon">
+        <i class="fa fa-map-marker"></i>
+      </div>
+      <div class="list-item__text">
+        <p>
+          located in the MUB Basement
+        </p>
+      </div>
+    </div>
+
+    <div class="list-item">
+      <div class="list-item__icon">
+        <i class="fa fa-clock-o"></i>
+      </div>
+      <div class="list-item__text">
+        <p>
+          open Monday - Thursday, 3:00 - 9:00 pm
+        </p>
+      </div>
+    </div>
+
+    <div class="list-item">
+      <div class="list-item__icon">
+        <i class="fa fa-money"></i>
+      </div>
+      <div class="list-item__text">
+        <p>
+          no cost for Michigan Tech students, faculty, and staff
+        </p>
+      </div>
+    </div>
+
+    <div class="list-item">
+      <div class="list-item__icon">
+        <i class="fa fa-wrench"></i>
+      </div>
+      <div class="list-item__text">
+        <p>
+          tools and equipment available to use for 3D printing, woodworking,
+          electronics, crafting, sewing, and more!
+        </p>
+      </div>
+    </div>
   </div>
 </div>
