--- a/updates.html
+++ b/updates.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: main
 ---
 
 <section id="home">
@@ -8,8 +8,8 @@ layout: default
       <div class="banner">
         <div class="row">
           <div class="small-12 columns">
-            <h3>
-              updates!
+            <h3 class="header">
+              Blog
             </h3>
           </div>
         </div>
