--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,11 +1,11 @@
 ---
-layout: default
+layout: main
 ---
 
 <div class="content wiki">
   <div class="row">
     <div class="small-12 columns">
-      <h3 class="green">
+      <h3 class="header">
         Makerspace Wiki
       </h3>
 
