Adding a bunch of wiki pages for tools

--- a/team/index.html
+++ b/team/index.html
@@ -12,13 +12,10 @@ layout: main
         <p>
           Bringing the old MUB Basement to life with an awesome space for
           creators, makers, tinkerers, designers, inventors, (whatever you
-          prefer to call yourself), takes a lot of work. And it's gonna take
-          even more when it comes to running it on a daily basis. That's
-          what the alley crew will do once we get it up and moving.
+          prefer to call yourself), takes a lot of work.
           Interested in helping out? <a
           href="https://docs.google.com/forms/d/1k2h8GUhAPetOmOHl19RDwa6ZBaaXHhA3LUfiEEQbOyo/viewform?c=0&w=1">Sign
-          up here!</a> For now, check out the committee of people working on
-          putting it all together!
+          up here!</a>
         </p>
 
         <h3 class="header">
