Updates for Magann
- added new advisors and coaches
- fixed disappearing nav issue

--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@ layout: default
           <div class="row">
             <div class="small-12 medium-8 medium-push-2 columns">
               <p>
-                Check out these awesome projects people at Michigan Tech are working on! We will try to add projects as often as we can, but if you want to see more awesome work feel free to <a href="http://www.twitter.com/makerspacemtu">follow us on Twitter</a> or <a href="http://www.facebook.com/makerspacemtu">like us on Facebook</a> for more updates. If you would like to be notified of future updates that we post, sign up for our mailing list <a href="http://eepurl.com/bKQAsf">here</a>!
+                Check out these awesome projects people at Michigan Tech are working on! We will try to add projects as often as we can, but if you want to see more awesome work feel free to <a href="{{ site.instagram_url }}">follow us on Instagram</a> or <a href="{{ site.facebook_url }}">like us on Facebook</a> for more updates. If you would like to be notified of future updates that we post, sign up for our mailing list <a href="http://eepurl.com/bKQAsf">here</a>!
               </p>
             </div>
           </div>
