--- a/team/index.html
+++ b/team/index.html
@@ -44,7 +44,7 @@ layout: main
               You
             </div>
             <h4 class="member__title">
-              Events Coordinator, Staff Coordinator, Funds Coordinator, or Marketing Coordinator
+              Operations Coordinator, Events Coordinator, Staff Coordinator, Funds Coordinator, or Marketing Coordinator
             </h4>
             <p class="member__bio small">
               We're always looking for new members interested in being part
@@ -77,9 +77,38 @@ layout: main
           Coaches
         </h3>
 
-        <p class="margin-bottom">
-          <em>Full list of coaches coming soon!</em>
-        </p>
+        <div class="row small-up-1 medium-up-2 large-up-3">
+            <p class="column">
+                Coach 1
+            </p>
+            <p class="column">
+                Coach 1
+            </p>
+            <p class="column">
+                Coach 1
+            </p>
+            <p class="column">
+                Coach 1
+            </p>
+            <p class="column">
+                Coach 1
+            </p>
+            <p class="column">
+                Coach 1
+            </p>
+            <p class="column">
+                Coach 1
+            </p>
+            <p class="column">
+                Coach 1
+            </p>
+            <p class="column">
+                Coach 1
+            </p>
+            <p class="column">
+                Coach 1
+            </p>
+        </div>
 
         <p class="margin-bottom">
           Stop by the Alley to meet our team of amazing coaches that are
