--- a/team/index.html
+++ b/team/index.html
@@ -79,34 +79,70 @@ layout: main
 
         <div class="row small-up-1 medium-up-2 large-up-3">
             <p class="column">
-                Coach 1
+                Alex Kuhn
             </p>
             <p class="column">
-                Coach 1
+                Cassie Zimmer
             </p>
             <p class="column">
-                Coach 1
+                Clarence Hardwick
             </p>
             <p class="column">
-                Coach 1
+                Connor Hensley
             </p>
             <p class="column">
-                Coach 1
+                Emil Johnson
             </p>
             <p class="column">
-                Coach 1
+                Gi West
             </p>
             <p class="column">
-                Coach 1
+                Jackie Mayrose
             </p>
             <p class="column">
-                Coach 1
+                Jaden Coe
             </p>
             <p class="column">
-                Coach 1
+                John Schneiderhan
             </p>
             <p class="column">
-                Coach 1
+                John Wyrzykowski
+            </p>
+           <p class="column">
+                Joseph Dion
+            </p>
+           <p class="column">
+                Luke Olari
+            </p>
+           <p class="column">
+                Lydia Wohlfeil
+            </p>
+           <p class="column">
+                Martin Mueller
+            </p>
+           <p class="column">
+                Max Casler
+            </p>
+           <p class="column">
+                Michael Patrick
+            </p>
+           <p class="column">
+                Peter Zhu
+            </p>
+           <p class="column">
+                Sam Bulthuis
+            </p>
+           <p class="column">
+                Samuel Dlugoss
+            </p>
+           <p class="column">
+                Sarah Lorenz
+            </p>
+           <p class="column">
+                Thomas Prica
+            </p>
+           <p class="column">
+                Zach Ferguson
             </p>
         </div>
 
