--- a/team/index.html
+++ b/team/index.html
@@ -82,13 +82,22 @@ layout: main
                 Alex Kuhn
             </p>
             <p class="column">
+                Casper Padilla
+            </p>
+            <p class="column">
                 Cassie Zimmer
             </p>
             <p class="column">
                 Clarence Hardwick
             </p>
             <p class="column">
+                Cody Creel
+            </p>
+            <p class="column">
                 Connor Hensley
+            </p>
+            <p class="column">
+                Elijah Young
             </p>
             <p class="column">
                 Emil Johnson
@@ -128,6 +137,12 @@ layout: main
             </p>
            <p class="column">
                 Peter Zhu
+            </p>
+           <p class="column">
+                Ronald Kyllonen
+            </p>
+           <p class="column">
+                Ross Richards
             </p>
            <p class="column">
                 Sam Bulthuis
