--- a/index.html
+++ b/index.html
@@ -66,3 +66,21 @@ layout: main
     </div>
   </div>
 </div>
+
+<div class="row">
+  <div class="small-12 columns">
+    <h2 class="header">
+      Our Sponsors
+    </h2>
+  </div>
+</div>
+<div class="row small-up-1 medium-up-2 large-up-3">
+  <!-- Copy and paste this snippet to add another sponsor. Don't forget to add the image to `/img/sponsors/{sponsor-name}` and update the url -->
+  <div class="column">
+    <div class="sponsor__photo" style="background-image: url('/img/sponsors/milwaukee.jpg');"></div>
+  </div>
+  <!-- End Snippet -->
+  <div class="column">
+    <div class="sponsor__photo" style="background-image: url('/img/sponsors/kimberly-clark.jpg');"></div>
+  </div>
+</div>
