--- a/team/index.html
+++ b/team/index.html
@@ -79,10 +79,13 @@ layout: main
 
         <div class="row small-up-1 medium-up-2 large-up-3">
             <p class="column">
-                Alex Kuhn
+                Adam Scholl
             </p>
             <p class="column">
-                Casper Padilla
+                Alex Israels
+            </p>
+            <p class="column">
+                Alex Kuhn
             </p>
             <p class="column">
                 Cassie Zimmer
@@ -106,9 +109,6 @@ layout: main
                 Gi West
             </p>
             <p class="column">
-                Jackie Mayrose
-            </p>
-            <p class="column">
                 Jaden Coe
             </p>
             <p class="column">
@@ -117,46 +117,43 @@ layout: main
             <p class="column">
                 John Wyrzykowski
             </p>
-           <p class="column">
+            <p class="column">
                 Joseph Dion
             </p>
-           <p class="column">
-                Luke Olari
-            </p>
-           <p class="column">
+            <p class="column">
                 Lydia Wohlfeil
             </p>
-           <p class="column">
+            <p class="column">
                 Martin Mueller
             </p>
-           <p class="column">
+            <p class="column">
+                Matthew Stawicki
+            </p>
+            <p class="column">
                 Max Casler
             </p>
-           <p class="column">
+            <p class="column">
                 Michael Patrick
             </p>
-           <p class="column">
+            <p class="column">
                 Peter Zhu
             </p>
-           <p class="column">
+            <p class="column">
                 Ronald Kyllonen
             </p>
-           <p class="column">
-                Ross Richards
-            </p>
-           <p class="column">
+            <p class="column">
                 Sam Bulthuis
             </p>
-           <p class="column">
+            <p class="column">
                 Samuel Dlugoss
             </p>
-           <p class="column">
+            <p class="column">
                 Sarah Lorenz
             </p>
-           <p class="column">
+            <p class="column">
                 Thomas Prica
             </p>
-           <p class="column">
+            <p class="column">
                 Zach Ferguson
             </p>
         </div>
