--- a/team/index.html
+++ b/team/index.html
@@ -82,6 +82,9 @@ layout: main
                 Adam Scholl
             </p>
             <p class="column">
+                Alex Basaj
+            </p>
+            <p class="column">
                 Alex Israels
             </p>
             <p class="column">
@@ -91,10 +94,16 @@ layout: main
                 Cassie Zimmer
             </p>
             <p class="column">
+                Chelsey Rock
+            </p>
+            <p class="column">
                 Cody Creel
             </p>
             <p class="column">
                 Connor Hensley
+            </p>
+            <p class="column">
+                Cora Jarman
             </p>
             <p class="column">
                 Elijah Young
@@ -134,6 +143,12 @@ layout: main
             </p>
             <p class="column">
                 Sarah Lorenz
+            </p>
+            <p class="column">
+                Theo Wachowski
+            </p>
+            <p class="column">
+                Xochi Hubbel-Fox
             </p>
         </div>
 
