--- a/index.html
+++ b/index.html
@@ -83,4 +83,7 @@ layout: main
   <div class="column">
     <div class="sponsor__photo" style="background-image: url('/img/sponsors/kimberly-clark.jpg');"></div>
   </div>
+    <div class="column">
+    <div class="sponsor__photo" style="background-image: url('/img/sponsors/AlumniFriends_Black_Vertical.png');"></div>
+  </div>
 </div>
