--- a/team/index.html
+++ b/team/index.html
@@ -37,21 +37,7 @@ layout: main
               </p>
             </div>
           {% endfor %}
-
-          <div class="column member">
-            <div class="member__photo" style="background-image: url('/img/crew/you.png');"></div>
-            <div class="member__name">
-              You
-            </div>
-            <h4 class="member__title">
-              Operations Coordinator, Events Coordinator, Staff Coordinator, Funds Coordinator, or Marketing Coordinator
-            </h4>
-            <p class="member__bio small">
-              We're always looking for new members interested in being part
-              of the leadership team and helping shape the Alley. If you're
-              interested in any of the positions listed above, please
-              feel free to reach out!
-            </p>
+          
           </div>
         </div>
 
@@ -74,7 +60,7 @@ layout: main
         </div>
 
         <h3 class="header">
-          Coaches
+          Maker Coaches
         </h3>
 
         <div class="row small-up-1 medium-up-2 large-up-3">
