--- a/team/index.html
+++ b/team/index.html
@@ -137,6 +137,7 @@ layout: main
                 Xochi Hubbel-Fox
             </p>
         </div>
+        </div>
 
         <p class="margin-bottom">
           Stop by the Alley to meet our team of amazing coaches that are
