--- a/team/index.html
+++ b/team/index.html
@@ -68,13 +68,10 @@ layout: main
                 Adam Scholl
             </p>
             <p class="column">
-                Alex Basaj
-            </p>
-            <p class="column">
-                Alex Israels
-            </p>
-            <p class="column">
                 Alex Kuhn
+            </p>
+            <p class="column">
+                Asa Pierce
             </p>
             <p class="column">
                 Cassie Zimmer
@@ -83,62 +80,51 @@ layout: main
                 Chelsey Rock
             </p>
             <p class="column">
-                Cody Creel
+                Cody Tuftee
             </p>
             <p class="column">
-                Connor Hensley
+                Forest Collins
             </p>
             <p class="column">
-                Cora Jarman
-            </p>
-            <p class="column">
-                Elijah Young
+                Fred Poddig
             </p>
             <p class="column">
                 Jaden Coe
             </p>
             <p class="column">
-                John Schneiderhan
+                Jaideep Singh
             </p>
             <p class="column">
-                Lydia Wohlfeil
+                Kyra Pratley
+            </p>
+            <p class="column">
+                Landon Van Acker
             </p>
             <p class="column">
                 Martin Mueller
             </p>
             <p class="column">
-                Matthew Stawicki
+                Noah Skrzypczak
             </p>
             <p class="column">
-                Max Casler
-            </p>
-            <p class="column">
-                Michael Patrick
-            </p>
-            <p class="column">
-                Peter Zhu
-            </p>
-            <p class="column">
-                Ronald Kyllonen
+                Ron Kyllonen
             </p>
             <p class="column">
                 Sam Bulthuis
             </p>
             <p class="column">
-                Samuel Dlugoss
-            </p>
-            <p class="column">
-                Sarah Lorenz
+                Sam Dlugoss
             </p>
             <p class="column">
                 Theo Wachowski
             </p>
             <p class="column">
-                Xochi Hubbel-Fox
+                Zeb Jones
             </p>
         </div>
-        </div>
 
+
+        </p>
         <p class="margin-bottom">
           Stop by the Alley to meet our team of amazing coaches that are
           here to assist you and share their experience!
